crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__k8s_empty_objects.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: missing definition for `type`
   ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/v2/MetricTarget.ncl:17:3
   │
17 │   type
   │   ^^^^ required here
   │
   ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_80558_4.ncl:20:19
   │
20 │   metric_target = k8s.v2.MetricTarget & {},
   │                   ------------------------ in this record


STDOUT:
